--- a/package.json
+++ b/package.json
@@ -9,24 +9,24 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^2.0.0",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/native": "^7.0.0",
     "@react-navigation/stack": "^7.0.0",
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
-    "expo": "~51.0.28",
+    "expo": "^51.0.39",
+    "expo-constants": "~16.0.2",
     "expo-linear-gradient": "^13.0.2",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-chart-kit": "^6.12.0",
     "react-native-dotenv": "^3.4.11",
-    "react-native-gesture-handler": "^2.20.2",
+    "react-native-gesture-handler": "^2.16.1",
     "react-native-paper": "^5.12.5",
-    "react-native-reanimated": "^3.16.1",
-    "react-native-safe-area-context": "^4.14.0",
-    "react-native-screens": "^4.0.0",
-    "expo-constants": "~16.0.2"
+    "react-native-reanimated": "^3.10.1",
+    "react-native-safe-area-context": "^4.10.5",
+    "react-native-screens": "^3.31.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
